--- a/config/carla_config.yaml
+++ b/config/carla_config.yaml
@@ -29,15 +29,83 @@ vehicle:
 
 # 수집할 데이터 필드
 frame_schema:
+  # === 기본 정보 ===
   - frame_id           # 프레임 번호
+  - timestamp          # 시뮬레이션 타임스탬프
   - image_path         # 이미지 경로
+  
+  # === 자차 상태 (Ego Vehicle) ===
   - ego_speed          # 자차 속도 (m/s)
   - ego_location       # 위치 [x, y, z]
   - ego_rotation       # 방향 [pitch, yaw, roll]
-  - traffic_light      # 신호등 상태
-  - speed_limit        # 속도 제한 (km/h)
+  - ego_velocity       # 속도 벡터 [vx, vy, vz]
+  - ego_acceleration   # 가속도 벡터 [ax, ay, az]
+  - ego_angular_velocity  # 각속도 [wx, wy, wz]
+  
+  # === 차량 제어 (Vehicle Control) ===
   - steer              # 핸들 각도 [-1, 1]
   - throttle           # 가속 [0, 1]
   - brake              # 제동 [0, 1]
+  # - hand_brake        # 핸드브레이크 여부
+  # - reverse           # 후진 기어 여부
+  # - gear              # 현재 기어 (0=neutral, 1~6)
+  
+  # === 교통 정보 ===
+  - traffic_light      # 신호등 상태 (Red/Yellow/Green/None)
+  - speed_limit        # 속도 제한 (km/h)
+  # - distance_to_traffic_light  # 신호등까지 거리 (m)
+  # - next_waypoint     # 다음 웨이포인트 위치
+  # - road_id           # 현재 도로 ID
+  # - lane_id           # 현재 차선 ID
+  # - is_junction       # 교차로 내부 여부
+  
+  # === 안전 이벤트 ===
   - collision          # 충돌 여부
   - lane_invasion      # 차선 침범 여부
+  # - collision_actor   # 충돌 대상 (vehicle/pedestrian/static)
+  # - collision_impulse # 충돌 강도 (Ns)
+  
+  # === 주변 객체 (Optional - 연산량 증가) ===
+  # - nearby_vehicles   # 주변 차량 리스트 [{id, distance, velocity, location}]
+  # - nearby_pedestrians # 주변 보행자 리스트
+  # - lead_vehicle_distance  # 선행 차량과의 거리 (m)
+  # - lead_vehicle_speed     # 선행 차량 속도 (m/s)
+  
+  # === 추가 센서 데이터 (별도 센서 필요) ===
+  # - depth_image_path  # 깊이 이미지 (sensor.camera.depth)
+  # - semantic_image_path  # 시맨틱 세그멘테이션 (sensor.camera.semantic_segmentation)
+  # - lidar_points_path # LiDAR 포인트 클라우드 (sensor.lidar.ray_cast)
+  # - radar_data        # 레이더 데이터 (sensor.other.radar)
+  # - gnss_data         # GPS 좌표 (sensor.other.gnss)
+  # - imu_data          # IMU 센서 (sensor.other.imu)
+
+# === 추가 가능한 센서 목록 ===
+# additional_sensors:
+#   depth_camera:
+#     type: sensor.camera.depth
+#     width: 800
+#     height: 600
+#   
+#   semantic_camera:
+#     type: sensor.camera.semantic_segmentation
+#     width: 800
+#     height: 600
+#   
+#   lidar:
+#     type: sensor.lidar.ray_cast
+#     channels: 32
+#     range: 50
+#     points_per_second: 100000
+#     rotation_frequency: 10
+#   
+#   radar:
+#     type: sensor.other.radar
+#     horizontal_fov: 30
+#     vertical_fov: 10
+#     range: 100
+#   
+#   gnss:
+#     type: sensor.other.gnss
+#   
+#   imu:
+#     type: sensor.other.imu
