--- a/.gitignore
+++ b/.gitignore
@@ -26,14 +26,43 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Dataset 폴더 제외
+dataset/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
 # 가상환경
 venv/
 env/
 ENV/
 env.bak/
 venv.bak/
-.venv
+.venv*/
 .conda/
+.venv312/
 
 # Jupyter Notebook
 .ipynb_checkpoints/
